--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bva/gulp-shopify-critical",
+  "name": "gulp-shopify-critical",
   "version": "1.3.0",
   "description": "turn critical css into a shopify snippet",
   "main": "index.js",
